[repo] msg: filter by src/dst workchains
